[GEOS-12163] Expose filtering in OGC API Maps
